--- a/page.html
+++ b/page.html
@@ -29,7 +29,7 @@
         <li class="buttons">Digital Logic</li>
       </ul>
     </aside>
-    <iframe class="mainFrame" src="" frameborder="0"></iframe>
+    <embed class="mainFrame" src=""></embed>
     <script src="page.js"></script>
   </body>
 </html>
