--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -34,8 +31,8 @@
         <img src="images/notebook.png" alt="" />
       </div>
       <div class="right">
-        Get all the notes from a single place! We are here to provide the best
-        notes of each subject.
+        <p class="primary">Get all the notes from a single place!</p>
+        <p class="secondary">We provide the best notes for each subject.</p>
       </div>
     </section>
 
@@ -66,9 +63,8 @@
         <div class="left">
           <h2>Our Vision</h2>
           <p>
-            We aim to provide you good quality notes so that you dont have to
-            worry about your exams anymore. Learn directly from the pdfs and you
-            can event download them.
+            We aim to provide high-quality notes so you don't have to worry
+            about exams. Learn from PDFs and even download them.
           </p>
         </div>
         <div class="right">
